minecraft/bedrock/bedrock-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft-bedrock
  labels:
    app.kubernetes.io/name: minecraft-bedrock
    app.kubernetes.io/component: game-server
