minecraft/bedrock/bedrock-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bedrock
  namespace: minecraft-bedrock
  annotations:
    mc-router.itzg.me/externalServerName: "bedrock.flexflix.top"
  labels:
    app.kubernetes.io/name: minecraft-bedrock
    app.kubernetes.io/component: game-server
spec:
  ports:
    - name: minecraft
      port: 25565
      targetPort: minecraft
    - name: bluemap
      port: 8100
      targetPort: bluemap
  selector:
    app.kubernetes.io/name: minecraft-bedrock
    app.kubernetes.io/component: game-server
---
apiVersion: v1
kind: Service
metadata:
  name: bedrock-loadbalancer
  namespace: minecraft-bedrock
  labels:
    app.kubernetes.io/name: minecraft-bedrock
    app.kubernetes.io/component: game-server
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.86.19
  externalTrafficPolicy: Cluster
  ports:
    - name: bedrock
      port: 19132
      targetPort: bedrock
      protocol: UDP
  selector:
    app.kubernetes.io/name: minecraft-bedrock
    app.kubernetes.io/component: game-server
